--- a/src/includes/pages/section-career.pug
+++ b/src/includes/pages/section-career.pug
@@ -11,7 +11,8 @@ section.section.section-career#vision
             h3.section-des My Vison
             h1.section-title #[span TRỞ THÀNH] NHÀ MARKETING & TRUYỀN THÔNG SỐ 1 VIỆT NAM & ĐÔNG NAM Á
             p Beautiful portfolio websites for creatives, powered by clever technology and you. Working with Baikal is a pleasure. From now on updating your site is something you’ll want to do.  Just started using awesome Baikal UI Kit. Great way to boost the designing or prototyping processê
-            +Button({ link: '#contact', title: 'BẮT ĐẦU CÙNG TÔI', className: 'blue' })
+            .button-groups.d-flex
+              +Button({ link: 'mailto: linhneo@gmail.com', title: 'BẮT ĐẦU CÙNG TÔI', className: 'blue' })
 
     .career-item
       .row
@@ -23,7 +24,8 @@ section.section.section-career#vision
             h3.section-des My Vison
             h1.section-title #[span TRỞ THÀNH] NHÀ SẢN XUẤT PHIM SỐ 1 VIỆT NAM & ĐÔNG NAM Á
             p Beautiful portfolio websites for creatives, powered by clever technology and you. Working with Baikal is a pleasure. From now on updating your site is something you’ll want to do.  Just started using awesome Baikal UI Kit. Great way to boost the designing or prototyping processê
-            +Button({ link: '#contact', title: 'BẮT ĐẦU CÙNG TÔI', className: 'blue' })
+            .button-groups.d-flex
+              +Button({ link: 'mailto: linhneo@gmail.com', title: 'BẮT ĐẦU CÙNG TÔI', className: 'blue' })
 
     .career-item
       .row 
@@ -35,4 +37,5 @@ section.section.section-career#vision
             h3.section-des My Vison
             h1.section-title #[span THÚC ĐẨY] NỀN ĐIỆN ẢNH VIỆT NAM PHÁT TRIỂN RỘNG RÃI TRÊN TOÀN CẦU
             p Beautiful portfolio websites for creatives, powered by clever technology and you. Working with Baikal is a pleasure. From now on updating your site is something you’ll want to do.  Just started using awesome Baikal UI Kit. Great way to boost the designing or prototyping processê
-            +Button({ link: '#contact', title: 'BẮT ĐẦU CÙNG TÔI', className: 'blue' })
+            .button-groups.d-flex
+              +Button({ link: 'mailto: linhneo@gmail.com', title: 'BẮT ĐẦU CÙNG TÔI', className: 'blue' })
