--- a/src/includes/pages/section-home-banner.pug
+++ b/src/includes/pages/section-home-banner.pug
@@ -7,4 +7,4 @@ section.section.section-home-banner#welcome
         h1.banner-title FILM PRODUCER
         p.banner-des Nhà làm phim mang đến những câu chuyện hấp dẫn và mang đến những trải nghiệm hình ảnh đáng nhớ!
         .button-groups.d-flex
-          +Button({ link: '#aboutme', icon: './assets/icons/icon-play-white.svg', title: 'My Story', className: 'white-transparent radius' })
+          +Button({ link: 'https://www.youtube.com/watch?v=ydKfZ84pgoI', isNewTab: true, icon: './assets/icons/icon-play-white.svg', title: 'My Story', className: 'white-transparent radius' })
