--- a/src/includes/components/button.pug
+++ b/src/includes/components/button.pug
@@ -5,7 +5,7 @@ mixin renderButton(data)
 
 mixin Button(data)
   if data.link 
-    a.button-component(href=`${data.link}` class=`${data.className}`).d-flex.align-items-center.justify-content-center
+    a.button-component(href=`${data.link}` class=`${data.className}` target=`${data.isNewTab ? '_blank' : '_self'}`).d-flex.align-items-center.justify-content-center
       +renderButton(data)
   else
     button.button-component(class=`${data.className}`).d-flex.align-items-center.justify-content-center
