--- a/src/includes/pages/section-about.pug
+++ b/src/includes/pages/section-about.pug
@@ -6,12 +6,47 @@ section.section.section-about#aboutme
       .row 
         .col-lg-5
           .about-image 
-            img(src="./assets/images/image-linhneo.png", alt="")
+            img(src="./assets/images/image-about-linhneo.png", alt="")
         .col-lg-7
           .about-content 
             h3.section-des GIỚI THIỆU
             h1.section-title #[span LINH NEO] - NGUYỄN NGỌC LINH
-            p Born and raised in London, Nolan developed an interest in filmmaking from a young age. After studying English literature at University College London, he made his feature debut with Following (1998). Nolan gained international recognition with his second film, Memento (2000), for which he was nominated for the Academy Award for Best Original Screenplay. Nolan's films are typically rooted in epistemological and metaphysical themes, exploring human morality, the construction of time, and the malleable nature of memory and personal identity. 
+            p Bắt đầu sự nghiệp sản xuất hình ảnh truyền thông từ 2012 – Cùng EL Effects, những sản phẩm tham khảo tại:
+            ul
+              li #[a(href="http://eleffects.com/#portfolio" target="_blank") http://eleffects.com/#portfolio]
+            p Với nền tảng về chuyên ngành khoa học kĩ thuật và truyền thông, Linhneo đã đảm nhiệm các công việc về điều phối dự án chuyển giao công nghệ - mô phỏng hình ảnh cho các doanh nghiệp về xây dựng – năng lượng – kiến trúc – và đảm nhiệm sản xuất các sản phẩm truyền thông – marketing cho rất nhiều doanh nghiệp trong và ngoài nước như:
+            ul 
+              li Công ty OTIEM ( Canada ) Financial Service
+              li Công ty TNHH Noah Legend VN
+              li Công ty TNHH Đăng GIA
+              li Công ty UBS GLOBAL
+              li Công ty Petro Vietnam
+
+            .about-social.d-flex.flex-wrap 
+              a(href="#").social-link.d-flex.facebook
+                img(src="./assets/icons/icon-facebook-white.svg", alt="")
+              a(href="#").social-link.d-flex.dribble
+                img(src="./assets/icons/icon-dribble-white.svg", alt="")
+              a(href="#").social-link.d-flex.behance
+                img(src="./assets/icons/icon-behance-white.svg", alt="")
+
+section.section.section-about#aboutme 
+  .section-text.text-1 Hoang
+  .section-text.text-2 Nghiem
+  .container 
+    .section-wrapper  
+      .row.flex-lg-row-reverse
+        .col-lg-5
+          .about-image 
+            img(src="./assets/images/image-about-hoangnghiem.png", alt="")
+        .col-lg-7
+          .about-content 
+            h3.section-des GIỚI THIỆU
+            h1.section-title #[span HOANG NGHIEM]
+            p Hoàng Nghiêm 
+            p Hơn 4 năm đào tạo và thực chiến trong lĩnh vực Marketing Online
+            p Tạo được nhiều ấn tượng tốt trong ngành truyền thông sản phẩm, linh hoạt trong cách làm việc và ý tưởng độc đáo. 
+            p Chuyên đào tạo và lập kế hoạch chi tiết truyền thông cho sản phẩm lên các nền tảng social giúp các doanh nghiệp tối ưu chi phí quảng cáo và quảng bá hình ảnh thương hiệu đến với thị trường.
 
             .about-social.d-flex.flex-wrap 
               a(href="#").social-link.d-flex.facebook
