Add video background

--- a/src/includes/pages/section-home-banner.pug
+++ b/src/includes/pages/section-home-banner.pug
@@ -1,5 +1,8 @@
 section.section.section-home-banner#welcome
-  img(src="./assets/images/image-banner.png", alt="").section-bg
+  //- img(src="./assets/images/image-banner.png", alt="").section-bg
+  .section-video-bg
+    video(src="./assets/videos/video-banner.mp4" autoplay muted loop)
+    .section-overlay
   .container
     .section-wrapper.d-flex.align-items-center.justify-content-center
       .section-content
