--- a/src/assets/css/pages/section-home-banner.scss
+++ b/src/assets/css/pages/section-home-banner.scss
@@ -1,5 +1,22 @@
 .section-home-banner {
+  .section-video-bg {
+    @include fullAbsolute;
+    z-index: 1;
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+    .section-overlay {
+      @include fullAbsolute;
+      z-index: 2;
+      background: rgba(0,0,0,0.4);
+    }
+  }
   .section-wrapper {
+    position: relative;
+    z-index: 3;
     min-height: 100vh;
     .section-content {
       padding: 5rem 0;
